tests/private_dns_eligible_update_prod/manifests/vs-update-with-allowed-gateway-and-no-annotation.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: vs-update-with-allowed-gateway-and-no-annotation
  namespace: wannot
spec:
  gateways:
  - istio-system/istio-ingressgateway-private
  hosts:
  - permit.com
  http:
  - route:
    - destination:
        host: valid-service
